--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <style>
     body{
-        background-image: url("file:///D:/Downloads/bg.gif")
+        background-image: url("bg.gif")
 
     }
 </style>
@@ -13,16 +13,16 @@
 
     <h2>webdiary if you will</h2>
 
-    <img src="file:///D:/Downloads/PIXECT-20250707152756.png" alt="picture of me">
+    <img src="PIXECT-20250707152756.png" alt="picture of me">
     <h1>picture of me, face edited for my anonymity</h1>
 
     <div  style="margin:0 auto; width: 665; background-color: red; border: 10px solid darkred;">
         <h1>my pets</h1>
 
-        <img src="file:///D:/Downloads/grisha_and_pyre.jpg" alt="grisha and pyre">
+        <img src="grisha_and_pyre.jpg" alt="grisha and pyre">
         <h3>grisha and pyre</h3>
         
-        <img src="file:///D:/Downloads/tara.jpg" alt="tara">
+        <img src="tara.jpg" alt="tara">
         <h3>tara</h3>
 
         <h2>sorry i could not get a picture of all my pets</h2>
